# Piper0

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  README.md  vcpkg.json
.github/workflows/: windows.yml
data/: RefractiveIndextoPiper0.py  mitsuba2toPiper0.py
data/ior/: 3C-SiC.json  4H-SiC.json  6H-SiC.json  AGS.json  Ag.json  Al.json  Al2O3-Sapphire.json  AlAs_palik.json  AlSb.json  Au.json  B.json  B4C.json  Be_palik.json  Bi.json  C-CVD-Diamond.json  C-Graphite.json  Ca.json  CaCO3.json  CaF2.json  Ce.json  Co.json  Cr.json  CsI_palik.json  Cu.json  Cu2O.json  Cu70Zn30.json  Cu85Zn15.json  Cu90Zn10.json  CuO.json  Cu_palik.json  Fe.json  Fe2O3.json  Fe3O4.json  FusedSilica.json  GaAs.json  GaN.json  Ge.json  GlassBAF10.json  GlassBAK1.json  GlassBK7.json  (+57 more)
include/Piper/: Config.hpp  PiperFwd.hpp
include/Piper/Core/: Common.hpp  ConfigNode.hpp  Context.hpp  FileIO.hpp  Monitor.hpp  NaiveUI.hpp  RefCount.hpp  Report.hpp  StaticFactory.hpp  Stats.hpp  Sync.hpp
include/Piper/Render/: Acceleration.hpp  BSDF.hpp  BxDFs.hpp  ColorMatchingFunction.hpp  ColorSpace.hpp  Filter.hpp  Frame.hpp  Fresnel.hpp  Integrator.hpp  Intersection.hpp  KeyFrames.hpp  Light.hpp  LightSampler.hpp  Material.hpp  Math.hpp  MuellerMatrix.hpp  Pipeline.hpp  PipelineNode.hpp  Radiometry.hpp  Random.hpp  Ray.hpp  RenderGlobalSetting.hpp  SampleUtil.hpp  Sampler.hpp  SamplingUtil.hpp  Scattering.hpp  SceneObject.hpp  Sensor.hpp  ShadingContext.hpp  Shape.hpp  SpectralLUTUtil.hpp  Spectrum.hpp  SpectrumUtil.hpp  StandardIlluminant.hpp  TestUtil.hpp  Texture.hpp  Transform.hpp  Variants.hpp
src/: CMakeLists.txt
src/Acceleration/: Embree.cpp
src/CLI/: NaiveUI.cpp  PiperCLI.cpp
src/Core/: ConfigNodeJSON.cpp  Context.cpp  FileIO.cpp  Monitor.cpp  Report.cpp  StaticFactory.cpp  Stats.cpp  Sync.cpp
src/Filter/: Box.cpp  Gaussian.cpp  Lanczos.cpp  Triangle.cpp
src/Integrator/: Path.cpp
src/Light/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
src/LightSampler/: UniformSampler.cpp
src/Material/: StandardBRDF.cpp
src/Material/Adapter/: MixedMaterial.cpp  NormalMap.cpp
src/Material/Builtin/: Conductor.cpp  Dielectric.cpp  Diffuse.cpp
src/Pipeline/: EXROutput.cpp  LDROutput.cpp  OIDN.cpp  Preview.cpp  Render.cpp
src/RenderUtil/: ColorSpace.cpp  KeyFrames.cpp  Math.cpp  PipelineNode.cpp  RenderGlobalSetting.cpp  SceneObject.cpp  Sensor.cpp  SpectrumUtil.cpp
src/Sampler/: Sobol.cpp  SobolKernel.ispc
src/SceneBuilder/: PiperPipeline.cpp
src/Sensor/: ThinLen.cpp  ThinLens.cpp
src/Shape/: TriangleMesh.cpp
src/Spectrum/: MonoWavelengthSpectrum.cpp  RGB2SpecOpt.cpp  RGBSpectrum.cpp  SpectralSpectrum.cpp
src/Texture/: BitMap.cpp  BlackBody.cpp  CheckerBoard.cpp  InterpolatedTexture.cpp  MonoSpectrumTexture.cpp  RGBSpectrum.cpp  RGBSpectrumTexture.cpp  SampledSpectrumTexture.cpp
test/: BSDFTest.cpp  CMakeLists.txt  ColorTest.cpp  SpectrumTest.cpp  TestUtil.cpp
