cmake_minimum_required (VERSION 3.20)
enable_testing()

project("Piper")
set(CMAKE_CXX_STANDARD 23)

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	add_compile_definitions("UNICODE")
	add_compile_definitions("_UNICODE")
	add_compile_options("/utf-8" "/Zc:__cplusplus")
	if(CMAKE_BUILD_TYPE MATCHES Debug)
		add_compile_options("/Od" "/Oy-")
	else()
		add_compile_options("/O2" "/Ob2" "/Oi" "/Ot" "/Oy" "/GT" "/GL" "/Qpar" "/arch:AVX2")
		add_link_options("/LTCG:incremental" "/OPT:REF" "/OPT:ICF")
	endif()
elseif(CMAKE_COMPILER_IS_GNUCXX)
	if(CMAKE_BUILD_TYPE MATCHES Debug)
		add_compile_options("-fsanitize=address" "-O0" "-fno-omit-frame-pointer")
	else()
		add_compile_options("-Ofast")
	endif()
else()
	message(FATAL "Unsupported Compiler")
endif()

include_directories("include")
add_subdirectory("src")
