cmake_minimum_required (VERSION 3.20)
enable_testing()

project("Piper")
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	add_compile_definitions("UNICODE")
	add_compile_definitions("_UNICODE")
	add_compile_options("/utf-8" "/Zc:__cplusplus" "/MP")
	if(NOT CMAKE_BUILD_TYPE MATCHES Release) 
		add_compile_definitions("PIPER_FLOATING_POINT_EXCEPTION_PROBE")
		add_compile_options("/fp:except")
	endif()

	if(CMAKE_BUILD_TYPE MATCHES Debug)
		add_compile_options("/Od" "/Oy-")
	else()
		add_compile_options("/O2" "/Oi" "/Ot" "/Oy" "/GT" "/GL" "/Qpar" "/arch:AVX2")
	endif()
elseif(CMAKE_COMPILER_IS_GNUCXX)
	if(CMAKE_BUILD_TYPE MATCHES Debug)
		add_compile_options("-fsanitize=address" "-O0" "-fno-omit-frame-pointer")
	else()
		add_compile_options("-Ofast")
	endif()
else()
	message(FATAL "Unsupported Compiler")
endif()

include_directories("include")
add_subdirectory("src")
add_subdirectory("test")
